@@ -17,9 +17,11 @@
 
 package org.wildfly.prospero.cli.commands;
 
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import org.assertj.core.groups.Tuple;
 import org.junit.Assert;
@@ -27,12 +29,15 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
+import org.wildfly.channel.Channel;
+import org.wildfly.channel.ChannelManifest;
+import org.wildfly.channel.ChannelManifestCoordinate;
+import org.wildfly.channel.Repository;
 import org.wildfly.prospero.api.InstallationMetadata;
 import org.wildfly.prospero.api.exceptions.MetadataException;
 import org.wildfly.prospero.cli.AbstractConsoleTest;
 import org.wildfly.prospero.cli.CliMessages;
 import org.wildfly.prospero.cli.ReturnCodes;
-import org.wildfly.prospero.model.ChannelRef;
 import org.wildfly.prospero.test.MetadataTestUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -54,11 +59,17 @@ public class ChannelCommandTest extends AbstractConsoleTest {
         super.setUp();
 
         this.dir = tempDir.newFolder().toPath();
-        ChannelRef gaChannel = new ChannelRef(GA, null);
-        ChannelRef gavChannel = new ChannelRef(GAV, null);
-        ChannelRef urlChannel = new ChannelRef(null, URL);
-        MetadataTestUtils.createInstallationMetadata(dir,
-                Arrays.asList(gaChannel, gavChannel, urlChannel), Collections.emptyList());
+        Channel gaChannel = new Channel("test1", "", null, null,
+                List.of(new Repository("test", "http://test.org")),
+                ChannelManifestCoordinate.create(null, GA));
+        Channel gavChannel = new Channel("test1", "", null, null,
+                List.of(new Repository("test", "http://test.org")),
+                ChannelManifestCoordinate.create(null, GAV));
+        Channel urlChannel = new Channel("test1", "", null, null,
+                List.of(new Repository("test", "http://test.org")),
+                ChannelManifestCoordinate.create(URL, null));
+        MetadataTestUtils.createInstallationMetadata(dir, new ChannelManifest(null, null, null),
+                Arrays.asList(gaChannel, gavChannel, urlChannel));
         MetadataTestUtils.createGalleonProvisionedState(dir);
     }
 
@@ -72,8 +83,91 @@ public class ChannelCommandTest extends AbstractConsoleTest {
     }
 
     @Test
+    public void testAddEmptyRepository() {
+        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
+                CliConstants.DIR, dir.toString(),
+                CliConstants.MANIFEST, "org.test:test",
+                CliConstants.REPOSITORY, "");
+
+        Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
+        assertTrue(getErrorOutput().contains(CliMessages.MESSAGES.invalidRepositoryDefinition("")
+                .getMessage()));
+    }
+
+    @Test
+    public void testAddInvalidRepositoryNoId() {
+        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
+                CliConstants.DIR, dir.toString(),
+                CliConstants.MANIFEST, "org.test:test",
+                CliConstants.REPOSITORY, "http://test.te");
+
+        Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
+        assertTrue(getErrorOutput().contains(CliMessages.MESSAGES.invalidRepositoryDefinition("http://test.te")
+                .getMessage()));
+    }
+
+    @Test
+    public void testAddInvalidRepositoryTooManyParts() {
+        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
+                CliConstants.DIR, dir.toString(),
+                CliConstants.MANIFEST, "org.test:test",
+                CliConstants.REPOSITORY, "id::http://test.te::foo");
+
+        Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
+        assertTrue(getErrorOutput().contains(CliMessages.MESSAGES.invalidRepositoryDefinition("id::http://test.te::foo")
+                .getMessage()));
+    }
+
+    @Test
+    public void testAdd() throws MetadataException, MalformedURLException {
+        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
+                CliConstants.DIR, dir.toString(),
+                CliConstants.MANIFEST, "org.test:test",
+                CliConstants.REPOSITORY, "test_repo::http://test.te");
+        Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
+
+        exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
+                CliConstants.DIR, dir.toString(),
+                CliConstants.MANIFEST, "g:a2",
+                CliConstants.REPOSITORY, "test_repo::http://test.te");
+        Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
+
+        exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
+                CliConstants.DIR, dir.toString(),
+                CliConstants.MANIFEST, "file:/path",
+                CliConstants.REPOSITORY, "test_repo::http://test.te");
+        Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
+
+        InstallationMetadata installationMetadata = new InstallationMetadata(dir);
+        assertThat(installationMetadata.getProsperoConfig().getChannels())
+                .flatMap(c->c.getRepositories())
+                .map(r->Tuple.tuple(r.getId(), r.getUrl()))
+                .containsExactly(
+                        Tuple.tuple("test", "http://test.org"),
+                        Tuple.tuple("test", "http://test.org"),
+                        Tuple.tuple("test", "http://test.org"),
+                        Tuple.tuple("test_repo", "http://test.te"),
+                        Tuple.tuple("test_repo", "http://test.te"),
+                        Tuple.tuple("test_repo", "http://test.te")
+                );
+        assertThat(installationMetadata.getProsperoConfig().getChannels())
+                .map(c->c.getManifestRef())
+                .map(r->Tuple.tuple(r.getGav(), r.getUrl()))
+                .containsExactly(
+                        Tuple.tuple(GA, null),
+                        Tuple.tuple(GAV, null),
+                        Tuple.tuple(null, new URL(URL)),
+                        Tuple.tuple("org.test:test", null),
+                        Tuple.tuple("g:a2", null),
+                        Tuple.tuple(null, new URL("file:/path"))
+                );
+    }
+
+    @Test
     public void testAddInvalidInstallationDir() {
-        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD, "g:a:v2");
+        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
+                CliConstants.MANIFEST, "org.test:test",
+                CliConstants.REPOSITORY, "test_repo::http://test.te");
 
         Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
         assertTrue(getErrorOutput().contains(CliMessages.MESSAGES.invalidInstallationDir(ChannelCommand.currentDir())
@@ -82,7 +176,7 @@ public class ChannelCommandTest extends AbstractConsoleTest {
 
     @Test
     public void testRemoveInvalidInstallationDir() {
-        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE, GAV);
+        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE, "0");
 
         Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
         assertTrue(getErrorOutput().contains(CliMessages.MESSAGES.invalidInstallationDir(ChannelCommand.currentDir())
@@ -94,34 +188,7 @@ public class ChannelCommandTest extends AbstractConsoleTest {
         int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.LIST,
                 CliConstants.DIR, dir.toString());
         Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
-        Assert.assertEquals(3, getStandardOutput().lines().count());
-    }
-
-    @Test
-    public void testAdd() throws MetadataException {
-        int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
-                CliConstants.DIR, dir.toString(), "g:a:v2");
-        Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
-
-        exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
-                CliConstants.DIR, dir.toString(), "g:a2");
-        Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
-
-        exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.ADD,
-                CliConstants.DIR, dir.toString(), "file:/path");
-        Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
-
-        InstallationMetadata installationMetadata = new InstallationMetadata(dir);
-        assertThat(installationMetadata.getProsperoConfig().getChannels())
-                .extracting("gav", "url")
-                .containsExactly(
-                        Tuple.tuple(null, "file:/path"),
-                        Tuple.tuple("g:a2", null),
-                        Tuple.tuple("g:a:v2", null),
-                        Tuple.tuple(GA, null),
-                        Tuple.tuple(GAV, null),
-                        Tuple.tuple(null, URL)
-                );
+        Assert.assertEquals(3, getStandardOutput().lines().filter(l->l.contains("manifest")).count());
     }
 
     @Test
@@ -140,32 +207,63 @@ public class ChannelCommandTest extends AbstractConsoleTest {
     }
 
     @Test
-    public void testRemove() {
+    public void testRemove() throws Exception {
         int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
-                CliConstants.DIR, dir.toString(), GAV);
+                CliConstants.DIR, dir.toString(), "1");
         Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
+        try (InstallationMetadata installationMetadata = new InstallationMetadata(dir)) {
+            assertThat(installationMetadata.getProsperoConfig().getChannels())
+                    .map(c->c.getManifestRef())
+                    .map(r->Tuple.tuple(r.getGav(), r.getUrl()))
+                    .containsExactly(
+                            Tuple.tuple(GA, null),
+                            Tuple.tuple(null, new URL(URL))
+                    );
+        }
 
         exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
-                CliConstants.DIR, dir.toString(), GA);
+                CliConstants.DIR, dir.toString(), "0");
         Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
+        try (InstallationMetadata installationMetadata = new InstallationMetadata(dir)) {
+            assertThat(installationMetadata.getProsperoConfig().getChannels())
+                    .map(c->c.getManifestRef())
+                    .map(r->Tuple.tuple(r.getGav(), r.getUrl()))
+                    .containsExactly(
+                            Tuple.tuple(null, new URL(URL))
+                    );
+        }
 
         exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
-                CliConstants.DIR, dir.toString(), URL);
+                CliConstants.DIR, dir.toString(), "0");
         Assert.assertEquals(ReturnCodes.SUCCESS, exitCode);
+        try (InstallationMetadata installationMetadata = new InstallationMetadata(dir)) {
+            assertThat(installationMetadata.getProsperoConfig().getChannels())
+                    .map(c->c.getManifestRef())
+                    .map(r->Tuple.tuple(r.getGav(), r.getUrl()))
+                    .isEmpty();
+        }
     }
 
     @Test
     public void testRemoveNonExisting() {
         int exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
-                CliConstants.DIR, dir.toString(), "g:a:v2");
+                CliConstants.DIR, dir.toString(), "4");
         Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
 
         exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
-                CliConstants.DIR, dir.toString(), "g:a2");
+                CliConstants.DIR, dir.toString(), "-1");
         Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
 
+        // remove all channels
+        commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
+                CliConstants.DIR, dir.toString(), "0");
+        commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
+                CliConstants.DIR, dir.toString(), "0");
+        commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
+                CliConstants.DIR, dir.toString(), "0");
+
         exitCode = commandLine.execute(CliConstants.Commands.CHANNEL, CliConstants.Commands.REMOVE,
-                CliConstants.DIR, dir.toString(), "file:/path");
+                CliConstants.DIR, dir.toString(), "0");
         Assert.assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
     }
 
