@@ -23,21 +23,23 @@ import org.junit.rules.TemporaryFolder;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
+import org.wildfly.channel.Channel;
+import org.wildfly.channel.ChannelManifestCoordinate;
+import org.wildfly.channel.Repository;
 import org.wildfly.prospero.actions.MetadataAction;
 import org.wildfly.prospero.actions.PromoteArtifactBundleAction;
+import org.wildfly.prospero.api.ArtifactUtils;
 import org.wildfly.prospero.cli.AbstractConsoleTest;
 import org.wildfly.prospero.cli.ActionFactory;
 import org.wildfly.prospero.cli.CliMessages;
 import org.wildfly.prospero.cli.ReturnCodes;
 import org.wildfly.prospero.cli.commands.CliConstants;
-import org.wildfly.prospero.model.ChannelRef;
-import org.wildfly.prospero.model.RepositoryRef;
 import org.wildfly.prospero.test.MetadataTestUtils;
 
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
@@ -78,7 +80,7 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
 
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("file:///test/test"),
-                ChannelRef.fromString("org.test:custom-channel"));
+                ArtifactUtils.manifestFromString("org.test:custom-channel"));
     }
 
     @Test
@@ -132,10 +134,13 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         MetadataTestUtils.createInstallationMetadata(installationDir);
         MetadataTestUtils.createGalleonProvisionedState(installationDir, "org.wildfly.core:core-feature-pack");
 
+        Channel channel = new Channel("Customization", null, null, null,
+                List.of(new Repository(CUSTOMIZATION_REPO_ID, "file:///test/test")),
+                new ChannelManifestCoordinate(CUSTOM_CHANNELS_GROUP_ID, "test1"));
+
         when(actionFactory.promoter(any())).thenReturn(promoter);
         when(actionFactory.metadataActions(any())).thenReturn(metadataAction);
-        when(metadataAction.getChannels()).thenReturn(Arrays.asList(new ChannelRef(CUSTOM_CHANNELS_GROUP_ID + ":test1", null)));
-        when(metadataAction.getRepositories()).thenReturn(Arrays.asList(new RepositoryRef(CUSTOMIZATION_REPO_ID, "file:///test/test")));
+        when(metadataAction.getChannels()).thenReturn(List.of(channel));
 
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
@@ -144,7 +149,7 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
                 );
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("file:///test/test"),
-                ChannelRef.fromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
+                ArtifactUtils.manifestFromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
     }
 
     @Test
@@ -164,7 +169,7 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         );
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("http://test.repo"),
-                ChannelRef.fromString("org.custom:test"));
+                ArtifactUtils.manifestFromString("org.custom:test"));
     }
 
     @Test
@@ -173,9 +178,13 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         MetadataTestUtils.createInstallationMetadata(installationDir);
         MetadataTestUtils.createGalleonProvisionedState(installationDir, "org.wildfly.core:core-feature-pack");
 
+        Channel channel = new Channel("Customization", null, null, null,
+                List.of(new Repository(CUSTOMIZATION_REPO_ID, "file:///test/test")),
+                new ChannelManifestCoordinate(CUSTOM_CHANNELS_GROUP_ID, "test1"));
+
         when(actionFactory.promoter(any())).thenReturn(promoter);
         when(actionFactory.metadataActions(any())).thenReturn(metadataAction);
-        when(metadataAction.getChannels()).thenReturn(Arrays.asList(new ChannelRef(CUSTOM_CHANNELS_GROUP_ID + ":test1", null)));
+        when(metadataAction.getChannels()).thenReturn(List.of(channel));
 
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
@@ -185,6 +194,6 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         );
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("http://test.repo"),
-                ChannelRef.fromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
+                ArtifactUtils.manifestFromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
     }
 }
